fix: main grid layout bug

--- a/src/scss/abstracts/_helper.scss
+++ b/src/scss/abstracts/_helper.scss
@@ -6,11 +6,11 @@
   transform: translateX(-1000%);
   position: absolute;
   visibility: hidden;
-  transition: all 0.4s;
+  transition: transform 0.6s ease, opacity 0.6s ease
 }
 
 .isOpen {
-  transform: translateX(0%);
+  transform: translateX(0%) ;
   position: relative;
   visibility: visible;
 }
