--- a/src/scss/layouts/_main.scss
+++ b/src/scss/layouts/_main.scss
@@ -9,6 +9,13 @@
   justify-content: center;
   align-items: center;
 
+  &__top{
+    display: flex;
+    justify-content: flex-start;
+  }
+  &__title {
+    @include font(3, 3);
+  }
   &__container {
     width:100%;
     flex-grow: 1;
@@ -19,6 +26,7 @@
   &__btn {
     width: 100%;
   }
+
   &__subNav {
     margin-top: 32px;
     padding-top: 24px;
@@ -30,27 +38,32 @@
     overflow-x: visible;
     display: grid;
     grid-template-columns: 1fr auto 1fr;
-    grid-template-rows: auto 1fr auto;
 
     .main {
-      &__progress {
+      &__top{
         grid-column: 1/4;
         grid-row: 1/2;
       }
+      &__progress {
+        grid-column: 1/3;
+        grid-row: 2/3;
+      }
       &__content {
         grid-column: 1/2;
-        grid-row: 2/3;
+        grid-row: 3/4;
       }
       &__sub {
         grid-column: 3/4;
-        grid-row: 2/4;
+        grid-row: 2/5;
+        margin-top:38px;
         margin-left: 114px;
       }
       &__subNav {
         grid-column: 1/2;
-        grid-row: 3/4;
+        grid-row: 4/5;
         display: flex;
         justify-content: flex-end;
+        
       }
 
       &__btn {
